adding in merchant dashboard methods

--- a/app/views/merchants/merchants-dashboard.erb
+++ b/app/views/merchants/merchants-dashboard.erb
@@ -21,6 +21,7 @@
         <td><%= merchant.name %></td>
         <td><%= merchant.items.count %></td>
         <td><%= merchant.average_price %></td>
+        <td><%= merchant.total_price %></td>
       </tr>
     </div>
     <% end %>
