--- a/app/public/navigation.css
+++ b/app/public/navigation.css
@@ -58,3 +58,7 @@ a {
   border: solid;
   background-image: url(https://mobile-cuisine.com/wp-content/uploads/2012/12/Cotton-Candy-e1444165061821.jpg);
 }
+
+body {
+  background: linear-gradient(to top, hotpink, white)
+}
