--- a/app/views/dashboard.erb
+++ b/app/views/dashboard.erb
@@ -1,9 +1,10 @@
 <html>
 <head>
-  <link rel="stylesheet" type="text/css" href="../../../dashboard.css">
+  <link rel="stylesheet" type="text/css" href="../../../navigation.css">
+  <link rel="stylesheet" type="text/css" href="../../../main.css">
   <title>Little Shop</title>
 </head>
-<body class="home-hero">
+<body>
   <%= erb :navigation %>
   <header class="header">
     <h1 class="header-title">Welcome to the Little Shop!</h1>
