--- a/app/views/merchants/edit.erb
+++ b/app/views/merchants/edit.erb
@@ -5,11 +5,12 @@
 </head>
 <body>
   <%= erb :navigation %>
-
-  <form action="/merchants/<%= @merchant.id %>" method="post">
-    <h1>Edit</h1>
-    <input type="hidden" name="_method" value="PUT">
-    <input type="text" name="merchant[name]" value= "<%= @merchant.name %>"/><br/>
-    <input type= 'submit'/>
-  </form>
+  <header class="header">
+    <form action="/merchants/<%= @merchant.id %>" method="post">
+      <h1>Edit</h1>
+      <input type="hidden" name="_method" value="PUT">
+      <input type="text" name="merchant[name]" value= "<%= @merchant.name %>"/><br/>
+      <input type= 'submit'/>
+    </form>
+  </header>
 </body>
