--- a/app/views/merchants/index.erb
+++ b/app/views/merchants/index.erb
@@ -1,3 +1,4 @@
+<html>
 <head>
   <link rel="stylesheet" type="text/css" href="../../../reset.css">
   <link rel="stylesheet" type="text/css" href="../../../main.css">
@@ -26,3 +27,4 @@
       </div>
     <% end %>
 </body>
+</html>
