--- a/app/public/main.css
+++ b/app/public/main.css
@@ -28,6 +28,24 @@ a.button {
   float: right;
 }
 
+.invoice-alignment {
+  text-align: center;
+  display: inline-block;
+}
+.invoice-alignment form {
+  text-align: center;
+  display: inline-block;
+}
+
+.edit-button-center {
+  background-color: yellow;
+}
+
+.delete-button-center {
+  background-color: red;
+
+}
+
 #button a:hover {
     background-color: hotpink;
 }
@@ -88,7 +106,7 @@ a.button {
 }
 
 .invoice-display a:hover {
-  background-color: hotpink;  
+  background-color: hotpink;
 }
 
 
