--- a/app/views/invoices/show.erb
+++ b/app/views/invoices/show.erb
@@ -13,12 +13,12 @@
           <a href='/invoices-dashboard' class="dashboard-display">Dashboard</a>
           <h1 class ="header-title">Invoice: <%= @invoice.id %> - <%= @invoice.status %></h1>
           <div class="invoice-alignment">
-            
-            <form action='invoices/<%=@invoice.id %>/edit' method= "GET">
+
+            <form action='/<%=@invoice.id %>/edit' method= "GET">
               <input type="submit" value="edit" class="edit-button-center"/>
             </form>
 
-            <form action='invoices/<%= @invoice.id %>' method= "POST">
+            <form action='/<%= @invoice.id %>' method= "POST">
               <input type="hidden" name="_method" value="DELETE">
               <input type="submit" value="delete" class="delete-button-center"/>
             </form>
