--- a/app/views/invoices/invoices-dashboard.erb
+++ b/app/views/invoices/invoices-dashboard.erb
@@ -1,6 +1,6 @@
 <head>
   <link rel="stylesheet" type="text/css" href="../../../reset.css">
-  <link rel="stylesheet" type="text/css" href="../../../merchant_dashboard.css">
+  <link rel="stylesheet" type="text/css" href="../../../invoice_dashboard.css">
 <title>Invoice Dashboard</title>
 </head>
 
@@ -8,24 +8,24 @@
 
 <body>
 
-<div class="header">
-    <h1 class ="header-title">Invoice Dashboard</h1>
-</div>
-<table class="flex-container">
-  <tr>
-    <th>Invoice Statuses</th>
-    <th>Invoice Status</th>
-    <th>Average Price of Item</th>
-    <th>Total Cost of Items</th>
-  </tr>
-  <!-- <% @invoices.each do |invoice| %>
-    <div class="table-data">
-      <tr>
-        <td><%= invoice.id %></td>
-        <td><%= invoice.status %></td>
-        <td><%= invoice.merchant_id %></td>
-      </tr>
-    </div>
-    <% end %> -->
-</table>
+  <div class="header">
+      <h1 class ="header-title">Invoice Dashboard</h1>
+  </div>
+
+  <div class="invoice-dashboard-container">
+    <section class="info-box">
+      <h1>Status Percentages</h1>
+      <% Invoice.unique_statuses.each do |status| %>
+        <p> <%= status %> </p>
+      <% end %>
+    </section>
+
+    <section class="info-box">
+      <h1>Unit Prices</h1>
+      <% Invoice.unique_statuses.each do |status| %>
+        <p> <%= status %> </p>
+      <% end %>
+    </section>
+  </div>
+
 </body>
