--- a/app/views/items/index.erb
+++ b/app/views/items/index.erb
@@ -10,7 +10,7 @@
     <%= erb :navigation %>
 
     <header class="header">
-      <a href='/items/dashboard'>Dashboard</a>
+      <a href='/items-dashboard'>Dashboard</a>
       <h1 class="header-title">Items</h1>
       <a href='/items/new'>Create A New Item</a>
     </header>
