--- a/app/public/invoice_dashboard.css
+++ b/app/public/invoice_dashboard.css
@@ -14,18 +14,34 @@ body {
   font-size: 40px;
 }
 
-.container {
+.invoice-dashboard-container {
   display: flex;
-  flex-direction: row;
-  flex-flow: column nowrap;
-  border: 3px black solid;
+  align-items: center;
+  justify-content: center;
 }
 
 .info-box {
-  display: flex;
-  flex-flow: column nowrap;
-  justify-content: center;
   align-items: center;
+  padding: 20px;
   border: 3px black solid;
   margin: 25px;
+}
+
+.info-box h1 {
+  font-weight: bold;
+  font-size: 25px;
+  padding: 5px;
+}
+
+.info-box li {
+  list-style: none;
+  padding: 10px;
+}
+
+.left {
+  float: left;
+}
+
+.right {
+  float: right;
 }
