--- a/app/public/main.css
+++ b/app/public/main.css
@@ -2,6 +2,15 @@ body {
   background: linear-gradient(to top, hotpink, white)
 }
 
+table {
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  border-collapse: collapse;
+  border-spacing: 0;
+  width: 90%;
+}
+
 /* BUTTON STYLES */
 a.button {
   color: white;
