Add content headers and average price to item dashboard.

--- a/app/views/items/dashboard.erb
+++ b/app/views/items/dashboard.erb
@@ -12,6 +12,16 @@
     </header>
     <main>
       <div>
+        <h1>Total Item Count</h1>
+      </div>
+      <div>
+        <h1>Avg Price Per Item</h1>
+        <%= @items.average_price %>
+      </div>
+      <div>
+        <h1>Item by Age</h1>
+        <p>Newest</p>
+        <p>Oldest</p>
       </div>
     </main>
   </body>
