--- a/app/views/dashboard.erb
+++ b/app/views/dashboard.erb
@@ -9,5 +9,25 @@
   <header class="header">
     <h1 class="header-title">Welcome to the Little Shop!</h1>
   </header>
+  <div class="dashboard-section">
+    <section class="dashboard-display">
+        <h3 class="merchant-header">Merchants</h3>
+        <a href="/merchants">Merchant Index</a>
+        <a href="/merchants/new">Create a New Merchant</a>
+        <a href="/merchants-dashboard">Merchant Dashboard</a>
+    </section>
+    <section class="dashboard-display">
+      <h3 class="merchant-header">Invoices</h3>
+      <a href="/invoices">Invoice Index</a>
+      <a href="/invoices-dashboard">Invoice Dashboard</a>
+    </section>
+    <section class="dashboard-display">
+      <h3 class="merchant-header">Items</h3>
+      <a href="/items">Items Index</a>
+      <a href="/items/new">Create a Item</a>
+      <a href="/item-dashboard">Item Dashboard</a>
+    </section>
+  </div>
+
 </body>
 </html>
