--- a/app/views/merchants/new.erb
+++ b/app/views/merchants/new.erb
@@ -9,8 +9,8 @@
       <h1 class ="header-title">Create a New Merchant!</h1>
 
     <form action="/merchants" method="post">
-      <input type="text" name='merchant[name]' value="Merchant Name">
-      <input class="submit-button" type="submit"/>
+      <input type="text" name='merchant[name]' placeholer="Enter Name...">
+      <input class="submit-button" type="submit" value="Create">
     </form>
   </div>
 </body>
