--- a/app/views/navigation.erb
+++ b/app/views/navigation.erb
@@ -10,6 +10,7 @@
         <div class="dropdown-links">
             <a href="/merchants">Merchant Index</a>
             <a href="/merchants/new">Create a New Merchant</a>
+            <a href="/merchants-dashboard">Merchant Dashboard</a>
         </div>
     </div>
 
@@ -18,6 +19,7 @@
         <div class="dropdown-links">
             <a href="/items">Item Index</a>
             <a href="/items/new">Create a New Item</a>
+            <a href="/items-dashboard">Item Dashboard</a>
         </div>
     </div>
 
@@ -26,6 +28,7 @@
         <div class="dropdown-links">
             <a href="/invoices">Invoice Index</a>
             <a href="/invoices/new">Create a New Invoice</a>
+            <a href="/invoices-dashboard">Invoice Dashboard</a>
         </div>
     </div>
   </nav>
