--- a/app/public/main.css
+++ b/app/public/main.css
@@ -11,6 +11,23 @@ table {
   width: 90%;
 }
 
+tr {
+  border: 2px black solid;
+  background-color: white;
+}
+
+th {
+  padding: 10px;
+}
+
+td {
+  padding: 10px;
+}
+
+td a:hover {
+  background-color: hotpink;
+}
+
 /* BUTTON STYLES */
 a.button {
   color: white;
@@ -97,7 +114,7 @@ a.button {
   margin: auto;
   width: 500px;
   border: solid;
-  padding: 15px 0px;
+  padding: 20px 0px;
   width: 50%;
 }
 
