--- a/app/views/merchants/show.erb
+++ b/app/views/merchants/show.erb
@@ -27,7 +27,7 @@
       <li><img src="<%= item.image %>"></li>
       <li><%= item.title %></li>
       <li><%= item.description %></li>
-      <li><%= item.price %></li>
+      <li><%= "$" + (item.price / 100).to_s %></li>
   </section>
   <% end %>
 </body>
