Prepare for merge from master.

--- a/app/views/items/dashboard.erb
+++ b/app/views/items/dashboard.erb
@@ -13,6 +13,7 @@
     <main>
       <div>
         <h1>Total Item Count</h1>
+        <%= @items.total_count %>
       </div>
       <div>
         <h1>Avg Price Per Item</h1>
