Add methods oldest, newest, and total count to item model. Add info to dashboard view.

--- a/app/views/items/dashboard.erb
+++ b/app/views/items/dashboard.erb
@@ -22,7 +22,9 @@
       <div>
         <h1>Item by Age</h1>
         <p>Newest</p>
+        <%= @items.newest %>
         <p>Oldest</p>
+        <%= @items.oldest %>
       </div>
     </main>
   </body>
