styling the show page

--- a/app/public/main.css
+++ b/app/public/main.css
@@ -164,6 +164,14 @@ a.button {
   background-color: hotpink;
 }
 
+.invoice-edit-button {
+  float: right;
+}
+
+.invoice-delete-button {
+  float: right;
+}
+
 
 /* MERCHANT STYLES */
 
