--- a/app/public/main.css
+++ b/app/public/main.css
@@ -9,6 +9,7 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
   width: 90%;
+  margin: 50px;
 }
 
 tr {
@@ -26,6 +27,10 @@ td {
 
 td a:hover {
   background-color: hotpink;
+}
+
+h1 {
+
 }
 
 /* BUTTON STYLES */
@@ -119,6 +124,11 @@ a.button {
   margin: 5px;
 }
 
+.big-merchant-name {
+  font-size: 50px;
+  text-decoration: underline;
+  text-align: center;
+}
 
 .flex-container {
   display: flex;
