--- a/app/views/invoices/invoices-dashboard.erb
+++ b/app/views/invoices/invoices-dashboard.erb
@@ -29,24 +29,18 @@
 
     <section class="info-box">
       <h1>Unit Prices</h1>
-      <h3>Highest</h3>
-      <h4>Invoice: <a href="/invoices/<%= InvoiceItem.highest_unit_price %>"> <%= InvoiceItem.highest_unit_price %></a></h4>
-      <h3>Lowest</h3>
-      <h4>Invoice: <a href="/invoices/<%= InvoiceItem.lowest_unit_price %>"> <%= InvoiceItem.lowest_unit_price %></a></h4>
+      <h3><a href="/invoices/<%= InvoiceItem.highest_unit_price %>">Highest</a></h3>
+      <h4>Invoice:    <a href="/invoices/<%= InvoiceItem.highest_unit_price %>"> <%= InvoiceItem.highest_unit_price %></a></h4>
+      <h3><a href="/invoices/<%= InvoiceItem.lowest_unit_price %>">Lowest</a></h3>
+      <h4>Invoice:    <a href="/invoices/<%= InvoiceItem.lowest_unit_price %>"> <%= InvoiceItem.lowest_unit_price %></a></h4>
     </section>
 
     <section class="info-box">
       <h1>Quantity</h1>
-      <section class="left">
-        <% Invoice.unique_statuses.each do |status| %>
-          <li> <%= status.capitalize %> </li>
-        <% end %>
-      </section>
-      <section class="right">
-        <% Invoice.status_percentages.each do |percentage| %>
-          <li> <%= percentage %>% </li>
-        <% end %>
-      </section>
+      <h3><a href="/invoices/<%= InvoiceItem.largest_quantity %>">Highest</a></h3>
+      <h4>Invoice:    <a href="/invoices/<%= InvoiceItem.largest_quantity %>"> <%= InvoiceItem.largest_quantity %></a></h4>
+      <h3><a href="/invoices/<%= InvoiceItem.smallest_quantity %>">Lowest</a></h3>
+      <h4>Invoice:    <a href="/invoices/<%= InvoiceItem.smallest_quantity %>"> <%= InvoiceItem.smallest_quantity %></a></h4>
     </section>
   </section>
 
