--- a/app/views/invoices/show.erb
+++ b/app/views/invoices/show.erb
@@ -8,47 +8,44 @@
   </head>
 
   <body>
+
     <%= erb :navigation %>
-      <div class="header">
-          <a href='/invoices-dashboard' class="dashboard-display">Dashboard</a>
-          <h1 class ="header-title">Invoice: <%= @invoice.id %> - <%= @invoice.status.capitalize %></h1>
-          <div class="invoice-alignment">
 
-            <form action='/<%=@invoice.id %>/edit' method= "GET">
-              <input type="submit" value="edit" class="edit-button-center"/>
-            </form>
+    <div class="header">
+        <a href='/invoices-dashboard' class="dashboard-display">Dashboard</a>
+        <h1 class ="header-title">Invoice: <%= @invoice.id %> - <%= @invoice.status.capitalize %></h1>
+        <div class="invoice-alignment">
 
-            <form action='/<%= @invoice.id %>' method= "POST">
-              <input type="hidden" name="_method" value="DELETE">
-              <input type="submit" value="delete" class="delete-button-center"/>
-            </form>
-          </div>
-          <a href='/invoices-dashboard'></a>
-      </div>
+          <form action='/<%=@invoice.id %>/edit' method= "GET">
+            <input type="submit" value="edit" class="edit-button-center"/>
+          </form>
 
-      <h1> <%= @invoice.merchant.name %> </h1>
+          <form action='/<%= @invoice.id %>' method= "POST">
+            <input type="hidden" name="_method" value="DELETE">
+            <input type="submit" value="delete" class="delete-button-center"/>
+          </form>
+        </div>
+        <a href='/invoices-dashboard'></a>
+    </div>
 
-        <table>
-          <tr>
-            <th>Item ID</th>
-            <th>Item Title</th>
-            <th>Quantity</th>
-            <th>Unit Price</th>
-          </tr>
-          <% @invoice.invoice_items.each do |invoice_item| %>
-          <tr>
-            <td><a href="/items/<%= invoice_item.item_id %>"> <%= invoice_item.item_id %></a></td>
-            <td> <%= invoice_item.find_title(invoice_item.item_id) %> </td>
-            <td> <%= invoice_item.quantity %> </td>
-            <td> <%= invoice_item.unit_price %> </td>
-          </tr>
-          <% end %>
-        </table>
+    <h1 class="big-merchant-name"> <%= @invoice.merchant.name %> </h1>
 
-    <form action="/invoices/<%= @invoice.id %>" method="post">
-      <input type="hidden" name="_method" value="PUT" />
-      <textarea name='invoice[status]'><%= @invoice.status %></textarea><br/>
-      <input type='submit'/>
-    </form>
+    <table>
+      <tr>
+        <th>Item ID</th>
+        <th>Item Title</th>
+        <th>Quantity</th>
+        <th>Unit Price</th>
+      </tr>
+      <% @invoice.invoice_items.each do |invoice_item| %>
+      <tr>
+        <td><a href="/items/<%= invoice_item.item_id %>"> <%= invoice_item.item_id %></a></td>
+        <td> <%= invoice_item.find_title(invoice_item.item_id) %> </td>
+        <td> <%= invoice_item.quantity %> </td>
+        <td> $<%= (invoice_item.unit_price / 100.0).round(2) %> </td>
+      </tr>
+      <% end %>
+    </table>
+
   </body>
 </html>
