adding in styling choices

--- a/app/views/navigation.erb
+++ b/app/views/navigation.erb
@@ -8,26 +8,26 @@
     <div class="dropdown">
         <button class="dropbtn">Merchants</button>
         <div class="dropdown-links">
-            <a href="/merchants">Merchant Index</a>
-            <a href="/merchants/new">Create a New Merchant</a>
-            <a href="/merchants-dashboard">Merchant Dashboard</a>
+            <li><a href="/merchants">Merchant Index</a></li>
+            <li><a href="/merchants/new">Create a New Merchant</a></li>
+            <li><a href="/merchants-dashboard">Merchant Dashboard</a></li>
         </div>
     </div>
 
     <div class="dropdown">
         <button class="dropbtn">Items</button>
         <div class="dropdown-links">
-            <a href="/items">Item Index</a>
-            <a href="/items/new">Create a New Item</a>
-            <a href="/items-dashboard">Item Dashboard</a>
+            <li><a href="/items">Item Index</a></li>
+            <li><a href="/items/new">Create a New Item</a></li>
+            <li><a href="/items-dashboard">Item Dashboard</a></li>
         </div>
     </div>
 
     <div class="dropdown">
         <button class="dropbtn">Invoices</button>
         <div class="dropdown-links">
-            <a href="/invoices">Invoice Index</a>
-            <a href="/invoices-dashboard">Invoice Dashboard</a>
+            <li><a href="/invoices">Invoice Index</a></li>
+            <li><a href="/invoices-dashboard">Invoice Dashboard</a></li>
         </div>
     </div>
   </nav>
