--- a/app/public/navigation.css
+++ b/app/public/navigation.css
@@ -1,4 +1,9 @@
 /* GLOBAL STYLES */
+body {
+  background: linear-gradient(to top, hotpink, white)
+  font-family: Verdana, Geneva, sans-serif;
+}
+
 a {
   color: black;
   text-decoration: none;
@@ -19,6 +24,7 @@ a {
     float: right;
     position: relative;
     display: inline-block;
+    list-style-type: circle;
 }
 
 .dropdown-links {
@@ -29,7 +35,7 @@ a {
   border-radius: 12px;
   background-color: white;
   text-decoration: none;
-  padding: 3px;
+  padding: 5px;
   z-index: 1;
 }
 
@@ -57,8 +63,4 @@ a {
   padding: 5px;
   border: solid;
   background-image: url(https://mobile-cuisine.com/wp-content/uploads/2012/12/Cotton-Candy-e1444165061821.jpg);
-}
-
-body {
-  background: linear-gradient(to top, hotpink, white)
 }
