--- a/app/views/merchants/show.erb
+++ b/app/views/merchants/show.erb
@@ -26,7 +26,7 @@
     <section class="merchant-display">
       <ul>
         <li><img src="<%= item.image %>"></li>
-        <li><%= item.title %></li>
+        <li><a href="/items/<%= item.id %>"><%= item.title %></a></li>
         <li><%= item.description %></li>
         <li><%= "$" + (item.price / 100).to_s %></li>
     </section>
