--- a/app/views/merchants/merchants-dashboard.erb
+++ b/app/views/merchants/merchants-dashboard.erb
@@ -12,11 +12,11 @@
   <div class="most-items">
     <h1>Merchant with the Most Items:</h1>
     <br>
-    <a href="/merchants/<%= @merchants.most_items.id %>" class="most-items"><%= @merchants.most_items.name %></a>
+    <a href="/merchants/<%= @merchants.most_items.id %>" class="most-items"><%= @merchants.most_items.name.capitalize %></a>
   </div>
   <br><br>
   <div class="expensive-items">
-    <h1>Merchant with the Highest Priced Item:</h1>
+    <h1><strong>Merchant with the Highest Priced Item:</strong></h1>
     <br>
     <a href="/merchants/<%= @merchants.highest_priced_item.id %>"><%= @merchants.highest_priced_item.name %></a>
   </div>
