--- a/app/views/items/dashboard.erb
+++ b/app/views/items/dashboard.erb
@@ -22,9 +22,9 @@
       <div>
         <h1>Item by Age</h1>
         <p>Newest</p>
-        <%= @items.newest %>
+        <%= @items.newest.title %>
         <p>Oldest</p>
-        <%= @items.oldest %>
+        <%= @items.oldest.title %>
       </div>
     </main>
   </body>
