--- a/app/public/main.css
+++ b/app/public/main.css
@@ -191,3 +191,22 @@ a.button {
 .link {
   text-decoration-line: underline;
 }
+
+.invoice-edit-container {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+}
+
+.edit-box {
+  align-items: center;
+  padding: 20px;
+  border: 3px black solid;
+  background-color: white;
+  margin: 5px 0px 0px 0px;
+}
+
+.edit-box p {
+  padding: 10px;
+}
