--- a/app/views/invoices/index.erb
+++ b/app/views/invoices/index.erb
@@ -10,7 +10,7 @@
 <body>
   <%= erb :navigation %>
     <div class="header">
-        <a href='/invoices-dashboard' class="dashboard-display">Dashboard</a>
+        <a href='/invoices-dashboard' class="dashboard-link">Dashboard</a>
         <h1 class ="header-title">Invoices</h1>
         <a href='/invoices-dashboard'></a>
     </div>
