--- a/app/views/invoices/show.erb
+++ b/app/views/invoices/show.erb
@@ -12,7 +12,7 @@
     <%= erb :navigation %>
 
     <div class="header">
-        <a href='/invoices-dashboard' class="dashboard-display">Dashboard</a>
+        <a href='/invoices-dashboard' class="dashboard-link">Dashboard</a>
         <h1 class ="header-title">Invoice: <%= @invoice.id %> - <%= @invoice.status.capitalize %></h1>
         <div class="invoice-alignment">
 
@@ -29,7 +29,7 @@
         <a href='/invoices-dashboard'></a>
     </div>
 
-    <h1 class="big-merchant-name"> <%= @invoice.merchant.name %> </h1>
+    <h1 class="big-merchant-name"><a href="/merchants/<%= @invoice.merchant_id %>"><%= @invoice.merchant.name %></a></h1>
 
     <table>
       <tr>
