Fix item creation, editing, and deletion.

--- a/app/views/items/edit.erb
+++ b/app/views/items/edit.erb
@@ -16,8 +16,8 @@
     <form action="/items" method="post">
       <input type="hidden" name="_method" value="PUT">
       <p>Merchant</p>
-      <select name="Merchants"><% @merchants.each do |merchant| %>
-        <option value="merchant"><%= merchant.name %></option>
+      <select name="item[merchant_id]"><% @merchants.each do |merchant| %>
+        <option value="<%= merchant.id %>"><%= merchant.name %></option>
         <% end %>
       </select>
       <p>Title</p>
