--- a/app/public/main.css
+++ b/app/public/main.css
@@ -223,3 +223,18 @@ a.button {
 .edit-box p {
   padding: 10px;
 }
+
+.item-image {
+  width: 50px;
+  height: 50px;
+}
+
+.item-display {
+  background: linear-gradient(to top, lightgreen, white);
+  display: inline-block;
+  border: 2px solid;
+  height: 200px;
+  width: 200px;
+  margin: 25px 10px 10px 10px;
+  text-align: center;
+}
