--- a/app/views/invoices/show.erb
+++ b/app/views/invoices/show.erb
@@ -30,23 +30,22 @@
     </div>
 
     <h1 class="big-merchant-name"><a href="/merchants/<%= @invoice.merchant_id %>"><%= @invoice.merchant.name %></a></h1>
-
-    <table>
-      <tr>
-        <th>Item ID</th>
-        <th>Item Title</th>
-        <th>Quantity</th>
-        <th>Unit Price</th>
-      </tr>
-      <% @invoice.invoice_items.each do |invoice_item| %>
-      <tr>
-        <td><a href="/items/<%= invoice_item.item_id %>"> <%= invoice_item.item_id %></a></td>
-        <td> <%= invoice_item.find_title(invoice_item.item_id) %> </td>
-        <td> <%= invoice_item.quantity %> </td>
-        <td> $<%= (invoice_item.unit_price / 100.0).round(2) %> </td>
-      </tr>
-      <% end %>
-    </table>
+    <section>
+        <tr>
+          <th>Item ID</th>
+          <th>Item Title</th>
+          <th>Quantity</th>
+          <th>Unit Price</th>
+        </tr>
+        <% @invoice.invoice_items.each do |invoice_item| %>
+        <tr>
+          <td><a href="/items/<%= invoice_item.item_id %>"> <%= invoice_item.item_id %></a></td>
+          <td> <%= invoice_item.find_title(invoice_item.item_id) %> </td>
+          <td> <%= invoice_item.quantity %> </td>
+          <td> $<%= (invoice_item.unit_price / 100.0).round(2) %> </td>
+        </tr>
+        <% end %>
+  </section>
 
   </body>
 </html>
