--- a/app/views/items/index.erb
+++ b/app/views/items/index.erb
@@ -14,13 +14,14 @@
       <h1 class="header-title">Items</h1>
       <a href='/items/new'>Create A New Item</a>
     </header>
-
+<section class="merchant-section">
     <% @items.each do |item| %>
-    <div class="item">
-      <div><img  src="<%= item.image %>" alt="Cotton Candy" style="width: 50px; height: 50px"></div>
-      <div class="link"><a href='/items/<%= item.id %>'><%= item.title %></a></div>
-      <div>$<%= item.price.to_f / 100 %></div>
+    <div class="item-display">
+      <img src="<%= item.image %>" alt="Cotton Candy" class="item-image"/>
+      <a href='/items/<%= item.id %>'><%= item.title %></a>
+      $<%= item.price.to_f / 100 %>
     </div>
     <% end %>
+  </section>
   </body>
 </html>
